# geomas

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: codeql.yml
examples/: advanced_example.py  basic_example.py  ocr_integration_example.py  ollama_example.py
geomas/: cli.py
geomas/api/: rag.py
geomas/core/: continued_pretrain.py  dataset.py  inference.py  instruct_train.py  logger.py  pdf_to_json.py  pdf_to_json_ai.py  pdf_to_json_paragraphs.py  utils.py
geomas/core/api/: ocr.py  pipelines.py  rag.py
geomas/core/config/: __init__.py  config.py  cpt-Mistral-NeMo-Minitron-8B-Base.yaml  cpt-Mistral-Nemo-Base-2407.yaml  cpt-Qwen3-14B-Base-unsloth-bnb-4bit.yaml  cpt-Qwen3-30B-A3B-Base-bnb-4bit.yaml  cpt-gemma-3-1b-pt.yaml  cpt-gemma-3-27b-pt.yaml  cpt-mistral-7b-v03-bnb-4bit.yaml  ocr-config.yaml
geomas/core/data/: annotation_converter.py  custom_dataloaders.py  data_transformation.py  dataset.py  instruct_formatter.py  qa_generator.py  s3_data.py  utils.py
geomas/core/inference/: bert_ner_inference.py  evaluation.py  inference.py  interface.py  lmstudio_client.py  old_inference.py  ollama_client.py
geomas/core/learning/: INSTRUCT_FINETUNING_GUIDE.md  bert_ner_trainer.py  continued_pretrain.py  old_cpt.py  sft_trainer.py
geomas/core/logging/: __init__.py  logger.py  mlflow.py  report.py
geomas/core/ocr_modules/: INTEGRATION_REPORT.md  __init__.py  api.py
geomas/core/ocr_modules/conversion/: pptx_splitter.py  text_table_to_pdf.py
geomas/core/ocr_modules/io/: fs.py  hashing.py  offline.py  paths.py
geomas/core/ocr_modules/logging/: __init__.py  logger.py
geomas/core/ocr_modules/models/: __init__.py  base.py  batch.py
geomas/core/ocr_modules/models/adapters/: marker.py  mineru.py
geomas/core/ocr_modules/pdf_preproc/: __init__.py  pipeline.py
geomas/core/ocr_modules/pdf_preproc/ops/: fix_fonts.py  split_pages.py
geomas/core/ocr_modules/runtime/: queue.py  resources.py  retry.py
geomas/core/ocr_modules/standardize/: __init__.py  md_spec.py
geomas/core/rag_modules/: data_adapter.py  rag_pipeline.py
geomas/core/rag_modules/convertation/: pdf_to_json.py  pdf_to_json_ai.py
geomas/core/rag_modules/database/: chroma_db.py  database_utils.py  dataloader.py
geomas/core/rag_modules/parser/: pyproject.toml  rag_parser.py  readme.md
geomas/core/rag_modules/parser/parser/: cli.py
geomas/core/rag_modules/parser/parser/core/: gk.py
geomas/core/rag_modules/parser/parser/core/utils/: logger.py
geomas/core/rag_modules/steps/: chunking.py  ranker.py  retriever.py
geomas/core/report/: __init__.py  pretrain.py
geomas/core/repository/: config.env  config_repository.py  constant_repository.py  database_repository.py  ocr_repository.py  parsing_repository.py  promts_repository.py  rag_repository.py
geomas/core/repository/data/: cpt-Mistral-Nemo-Base-2407.yaml  cpt-Qwen3-14B-Base-unsloth-bnb-4bit.yaml  cpt-Qwen3-30B-A3B-Base-bnb-4bit.yaml  cpt-gemma-3-1b-pt-unsloth-bnb-4bit.yaml  cpt-mistral-7b-v03.yaml
geomas/core/vision/: __init__.py  visual_data_processor.py  vlm_processor.py
ocr/: README.md  pyproject.toml
ocr/core/: __init__.py  api.py
ocr/core/conversion/: __init__.py  base.py  detectors.py  image_to_png.py
ocr/core/io/: __init__.py  cache.py
ocr/core/logging/: metrics.py
ocr/core/models/adapters/: __init__.py  olmocr.py  qwen_vl.py
ocr/core/pdf_preproc/ops/: binarize.py  crop.py  deskew.py  scale.py  split_pages.py
ocr/core/runtime/: __init__.py  orchestrator.py  queue.py
ocr/core/standardize/: markdown_writer.py
ocr/examples/: process_folder.py
parser/: readme.md
parser/parser/: cli.py
parser/parser/core/: gk.py
